Revisando nginx.conf

--- a/laravel-docker/deploy/nginx/nginx.conf
+++ b/laravel-docker/deploy/nginx/nginx.conf
@@ -2,6 +2,17 @@ events {
   worker_connections 1024;
 }
 http {
+    include    /etc/nginx/mime.types;
+
+    default_type application/octet-stream;
+    log_format   main '$remote_addr - $remote_user [$time_local]  $status '
+        '"$request" $body_bytes_sent "$http_referer" '
+        '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    sendfile     on;
+    tcp_nopush   on;
+    server_names_hash_bucket_size 128;
+
     fastcgi_cache_path /dev/shm levels=1:2 keys_zone=laravel:100m;
     fastcgi_cache_key "$scheme$request_method$host$request_uri$query_string";
     server {
@@ -64,37 +75,7 @@ http {
             # try_files $uri $uri/ /index.php?$query_string;
             try_files $uri $uri/ /index.php$is_args$args;
         }
-
-            location /recover/ {
-         proxy_http_version 1.1;
-         proxy_pass http://atlas.nucash.com.br;
-         #proxy_set_header Host $host;
-         #proxy_set_header X-Real-IP $remote_addr;
-         rewrite /recover/(.*) /convite/recover/$1 break;
-         #try_files $uri$args $uri$args/ $uri/ /index.html;
-
-        }
-
-         location ~* '^/convite/[^23]+\/.' {
-         proxy_http_version 1.1;
-         proxy_pass http://atlas.nucash.com.br;
-         #proxy_set_header Host $host;
-         #proxy_set_header X-Real-IP $remote_addr;
-         rewrite /convite/(.*) /convite/$1 break;
-         #try_files $uri$args $uri$args/ $uri/ /index.html;
-
-         }
-
-         location /cadastro/ {
-         proxy_http_version 1.1;
-         proxy_pass http://atlas.nucash.com.br;
-         #proxy_set_header Host $host;
-         #proxy_set_header X-Real-IP $remote_addr;
-         rewrite /cadastro/ /convite/ break;
-         #try_files $uri$args $uri$args/ $uri/ /index.html;
-
-         }
-
+         
         location ~ \.php$ {
             root /var/www/html/public;
             fastcgi_cache laravel;
@@ -124,5 +105,8 @@ http {
         location ~ /\.ht {
             deny all;
         }
+
+        error_log /var/log/nginx/painelnucash_error.log;
+        access_log /var/log/nginx/painelnucash_access.log;
     }
 }
